--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
---index-url https://download.pytorch.org/whl/cu118
 
 numpy== 1.26.4
-torch== 2.5.1
-torchvision== 0.20.1
 scipy== 1.15.2
 scikit-learn== 1.2.2
 scikit-image== 0.25.1
@@ -12,3 +9,7 @@ matplotlib== 3.9.2
 seaborn== 0.12.2
 pandas== 2.2.3
 einops==0.8.1
+
+torch== 2.5.1
+torchvision== 0.20.1
+--extra-index-url https://download.pytorch.org/whl/cu118
